# HW_DRF

./: Dockerfile  docker-compose.yaml  file.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
studies/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
studies/migrations/: 0001_initial.py  0002_alter_lesson_link.py  0003_lesson_course_lesson.py  0004_payment.py  0005_subscription.py  0006_course_buyer_lesson_buyer.py  0007_payment_is_paid_payment_payment_intent_id.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_role.py
